--- a/app/views/lookbook/_nav.html.erb
+++ b/app/views/lookbook/_nav.html.erb
@@ -1,10 +1,16 @@
 <div id="nav" class="h-full" x-data="nav($store.nav)" @document:updated.window="updateMenu">
   <div class="bg-white h-10 border-b border-gray-300 flex items-center relative">
+    <button class="flex-none ml-4 " x-show="!$screen('md')" @click="$dispatch('sidebar:toggle')" x-cloak>
+      <svg class="feather w-5 h-5 hover:text-indigo-500 transition">
+        <use xlink:href="#x" />
+      </svg>
+    </button>
     <input
       type="text"
       class="text-sm px-4 h-10 w-full border-0 bg-transparent focus:outline-none outline-none focus:ring-0"
       placeholder="Filter previews&hellip;"
       x-model="$store.nav.filter"
+      x-effect="if (sidebarOpenMobile) setTimeout(() => $el.focus(), 0)"
       @keyup.stop="if ($event.key === 'Escape') clearFilter();"
     >
     <button class="text-gray-400 hover:text-indigo-500 focus:ring-0 focus:outline-none absolute top-1/2 right-2 transform -translate-y-1/2" @click="clearFilter">
@@ -16,7 +22,7 @@
 
   <div class="relative overflow-y-auto w-full" style="height: calc(100% - 40px)">
     <div x-ref="shim">
-      <nav id="menu" class="select-none" x-data="navGroup" @menu:updated.window="filter" x-init="$watch('$store.nav.filterText', () => filter()); $nextTick(() => filter());">
+      <nav id="nav-menu" class="select-none" x-data="navGroup" @menu:updated.window="filter" x-init="$watch('$store.nav.filterText', () => filter()); $nextTick(() => filter());">
         <% if @nav.items.any? %>
           <ul x-ref="items">
             <% @nav.items.each do |group| %>
