--- a/app/views/lookbook/workbench/_inspector.html.erb
+++ b/app/views/lookbook/workbench/_inspector.html.erb
@@ -10,6 +10,7 @@
             'border-transparent text-gray-500 hover:text-gray-700': !active('<%= key %>')
           }"
           @click.stop.prevent="switchTo('<%= key %>')"
+          <% if props[:hotkey] %>data-hotkey="<%= props[:hotkey] %>"<% end %>
         >
           <%== props[:label] %>
         </a>
