--- a/app/views/lookbook/_sidebar.html.erb
+++ b/app/views/lookbook/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div id="nav" class="h-full" x-data="nav($store.nav)" @document:updated.window="updateMenu">
+<div id="sidebar" class="h-full" x-data="nav" @document:updated.window="updateNav">
   <div class="bg-white h-10 border-b border-gray-300 flex items-center relative">
     <button class="flex-none ml-4 " x-show="!$screen('md')" @click="$dispatch('sidebar:toggle')" x-cloak>
       <svg class="feather w-5 h-5 hover:text-indigo-500 transition">
@@ -22,7 +22,7 @@
 
   <div class="relative overflow-y-auto w-full" style="height: calc(100% - 40px)">
     <div x-ref="shim">
-      <nav id="nav-menu" class="select-none" x-data="navGroup" @menu:updated.window="filter" x-init="$watch('$store.nav.filterText', () => filter()); $nextTick(() => filter());">
+      <nav id="nav" class="select-none" x-data="navGroup" @nav:updated.window="filter" x-init="$watch('$store.nav.filterText', () => filter()); $nextTick(() => filter());">
         <% if @nav.items.any? %>
           <ul x-ref="items">
             <% @nav.items.each do |group| %>
