--- a/app/views/lookbook/nav/_preview.html.erb
+++ b/app/views/lookbook/nav/_preview.html.erb
@@ -1,7 +1,7 @@
-<%= render "./nav/group", group: group do %>
-  <% group.get_examples.each do |example| %>
+<%= render "./nav/node", node: node do %>
+  <% node.get_examples.each do |example| %>
     <% path = show_path example.path %>
-    <li x-data="navExample" :class="{hidden}" x-init="matchers = <%= example.matchers.to_json %>; path = '<%= path %>'; setActive()" @popstate.window="setActive">
+    <li x-data="navLeaf" :class="{hidden}" x-init="matchers = <%= example.matchers.to_json %>; path = '<%= path %>'; setActive()" @popstate.window="setActive">
       <a href="<%= path %>"
         class="pr-3 py-[5px] flex items-center w-full group transition hover:bg-gray-200 hover:bg-opacity-50"
         style="<%= nav_padding_style(example.hierarchy_depth + 1) %>"
