--- a/app/views/lookbook/workbench/inspector/_code.html.erb
+++ b/app/views/lookbook/workbench/inspector/_code.html.erb
@@ -1,1 +1,3 @@
-<pre class="h-full"><code class="h-full p-4 block highlight font-monospace" style="background-image: none"><%== highlight(content.strip, lang[:name]) %></code></pre>
+<pre class="h-full"><code class="h-full p-4 block highlight font-monospace" style="background-image: none"><% items.each do |item| %><%== highlight( "#{items.many? ? item[:label] + "\n" : ""}#{item[:content].strip}", item[:lang][:name]) %>
+
+<% end %></code></pre>
