--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1482,24 +1482,12 @@ pre[class*="language-"] {
   bottom: 0px;
 }
 
-.top-4 {
-  top: 1rem;
+.top-\[-2px\] {
+  top: -2px;
 }
 
-.right-4 {
-  right: 1rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
-.top-\[2px\] {
-  top: 2px;
+.left-\[-2px\] {
+  left: -2px;
 }
 
 .top-\[4px\] {
@@ -1510,64 +1498,8 @@ pre[class*="language-"] {
   left: 4px;
 }
 
-.top-\[6px\] {
-  top: 6px;
-}
-
-.left-\[6px\] {
-  left: 6px;
-}
-
-.-top-1 {
-  top: -0.25rem;
-}
-
-.-left-1 {
-  left: -0.25rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
-.left-3 {
-  left: 0.75rem;
-}
-
-.top-1 {
-  top: 0.25rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.-top-1\.5 {
-  top: -0.375rem;
-}
-
-.-left-1\.5 {
-  left: -0.375rem;
-}
-
-.-top-0 {
-  top: 0px;
-}
-
-.-left-0 {
-  left: 0px;
-}
-
-.left-\[2px\] {
-  left: 2px;
-}
-
-.top-\[-2px\] {
-  top: -2px;
-}
-
-.left-\[-2px\] {
-  left: -2px;
+.left-4 {
+  left: 1rem;
 }
 
 .z-10 {
@@ -1577,11 +1509,6 @@ pre[class*="language-"] {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.-my-4 {
-  margin-top: -1rem;
-  margin-bottom: -1rem;
 }
 
 .ml-4 {
@@ -1680,14 +1607,6 @@ pre[class*="language-"] {
   height: 1rem;
 }
 
-.h-2\.5 {
-  height: 0.625rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
 .w-5 {
   width: 1.25rem;
 }
@@ -1718,14 +1637,6 @@ pre[class*="language-"] {
 
 .w-4 {
   width: 1rem;
-}
-
-.w-2\.5 {
-  width: 0.625rem;
-}
-
-.w-2 {
-  width: 0.5rem;
 }
 
 .max-w-xs {
@@ -1815,36 +1726,15 @@ pre[class*="language-"] {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
-.divide-dashed > :not([hidden]) ~ :not([hidden]) {
-  border-style: dashed;
-}
-
 .divide-gray-300 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgba(209, 213, 219, var(--tw-divide-opacity));
-}
-
-.divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
 }
 
 .overflow-auto {
@@ -1867,18 +1757,6 @@ pre[class*="language-"] {
 
 .whitespace-nowrap {
   white-space: nowrap;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-b {
@@ -1965,11 +1843,6 @@ pre[class*="language-"] {
   background-color: rgba(224, 231, 255, var(--tw-bg-opacity)) !important;
 }
 
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-}
-
 .p-4 {
   padding: 1rem;
 }
@@ -2007,24 +1880,14 @@ pre[class*="language-"] {
   padding-right: 0.25rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .pr-3 {
@@ -2035,16 +1898,8 @@ pre[class*="language-"] {
   padding-left: 0.75rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .pt-10 {
   padding-top: 2.5rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
 }
 
 .pb-8 {
@@ -2088,10 +1943,6 @@ pre[class*="language-"] {
 
 .font-bold {
   font-weight: 700;
-}
-
-.uppercase {
-  text-transform: uppercase;
 }
 
 .italic {
@@ -2168,6 +2019,11 @@ pre[class*="language-"] {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-filter);
 }
 
 .filter {
