Add hotkey for opening preview in new window

--- a/app/views/lookbook/workbench/_header.html.erb
+++ b/app/views/lookbook/workbench/_header.html.erb
@@ -27,6 +27,7 @@
       href="<%= preview_path %>"
       class="block transition hover:text-indigo-800" target="_blank"
       x-tooltip.theme.lookbook="`Open in new window`"
+      data-hotkey="w"
     >
       <svg class="feather w-4 h-4">
         <use xlink:href="#external-link" />
