Use external icon sprite

--- a/app/views/lookbook/app/not_found.html.erb
+++ b/app/views/lookbook/app/not_found.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-white flex flex-col items-center justify-center h-screen w-full">
   <div class="p-4 text-center">
     <svg class="feather w-10 h-10 text-red-300 mx-auto">
-      <use xlink:href="#alert-triangle" />
+      <use xlink:href="/lookbook-assets/feather-sprite.svg#alert-triangle" />
     </svg>
     <div class="mt-3 text-gray-700 max-w-xs">
       <% if @preview %>
