--- a/app/views/lookbook/workbench/_header.html.erb
+++ b/app/views/lookbook/workbench/_header.html.erb
@@ -20,7 +20,7 @@
       data-hotkey="r"
     >
       <svg class="feather w-4 h-4">
-        <use xlink:href="#refresh-cw" />
+        <use xlink:href="/lookbook-assets/feather-sprite.svg#refresh-cw" />
       </svg>
     </a>
       <a
@@ -30,7 +30,7 @@
       data-hotkey="w"
     >
       <svg class="feather w-4 h-4">
-        <use xlink:href="#external-link" />
+        <use xlink:href="/lookbook-assets/feather-sprite.svg#external-link" />
       </svg>
     </a>
   </div>
