--- a/app/views/lookbook/_sidebar.html.erb
+++ b/app/views/lookbook/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <div class="bg-white h-10 border-b border-gray-300 flex items-center relative">
     <button class="flex-none ml-4 " x-show="!$screen('md')" @click="$dispatch('sidebar:toggle')" x-cloak>
       <svg class="feather w-5 h-5 hover:text-indigo-500 transition">
-        <use xlink:href="#x" />
+        <use xlink:href="/lookbook-assets/feather-sprite.svg#x" />
       </svg>
     </button>
     <input
@@ -17,7 +17,7 @@
     >
     <button class="text-gray-400 hover:text-indigo-500 focus:ring-0 focus:outline-none absolute top-1/2 right-2 transform -translate-y-1/2" @click="clearFilter">
       <svg class="feather w-3 h-3">
-        <use xlink:href="#x" />
+        <use xlink:href="/lookbook-assets/feather-sprite.svg#x" />
       </svg>
     </button>
   </div>
