--- a/app/views/lookbook/app/index.html.erb
+++ b/app/views/lookbook/app/index.html.erb
@@ -3,7 +3,7 @@
   <div class="flex flex-col items-center justify-center h-full min-h-fill">
     <div class="p-4 text-center">
       <svg class="feather w-10 h-10 text-gray-300 mx-auto">
-        <use xlink:href="#layers" />
+        <use xlink:href="/lookbook-assets/feather-sprite.svg#layers" />
       </svg>
       <h5 class="mt-4 text-gray-400 text-base">Select a preview to get started</h5>
     </div>
