--- a/app/views/lookbook/nav/_node.html.erb
+++ b/app/views/lookbook/nav/_node.html.erb
@@ -2,11 +2,11 @@
   <div @click="toggle" style="<%= nav_padding_style(node.hierarchy_depth) %>">
     <div class="flex items-center cursor-pointer pr-3 py-[5px]">
       <svg class="feather w-3 h-3 mr-1 text-gray-500 flex-none">
-        <use xlink:href="#chevron-down" x-show="open" x-cloak />
-        <use xlink:href="#chevron-right" x-show="!open()" x-cloak />
+        <use xlink:href="/lookbook-assets/feather-sprite.svg#chevron-down" x-show="open" x-cloak />
+        <use xlink:href="/lookbook-assets/feather-sprite.svg#chevron-right" x-show="!open()" x-cloak />
       </svg>
       <svg class="feather h-3.5 w-3.5 mr-1.5 flex-none text-indigo-500">
-        <use xlink:href="#<%= node.type == :preview ? 'layers' : 'folder' %>" />
+        <use xlink:href="/lookbook-assets/feather-sprite.svg#<%= node.type == :preview ? 'layers' : 'folder' %>" />
       </svg>
       <div class="truncate whitespace-nowrap text-left <%= "font-bold" if node.type == :preview %>">
         <%= node.label %>
