--- a/app/views/lookbook/nav/_preview.html.erb
+++ b/app/views/lookbook/nav/_preview.html.erb
@@ -10,11 +10,11 @@
       >
         <div class="relative w-3.5 h-3.5 mr-1.5" :class="active ? 'text-gray-900' : 'text-indigo-500'"> 
           <svg class="feather flex-none group-hover:text-indigo-800 transition <% if example.type == :group %> absolute top-[-2px] left-[-2px] w-3 h-3<% else %>w-3.5 h-3.5<% end %>">
-            <use xlink:href="#eye" />
+            <use xlink:href="/lookbook-assets/feather-sprite.svg#eye" />
           </svg>
           <% if example.type == :group %>
             <svg class="feather w-3 h-3 flex-none group-hover:text-indigo-800 transition absolute top-[4px] left-[4px]">
-              <use xlink:href="#eye" />
+              <use xlink:href="/lookbook-assets/feather-sprite.svg#eye" />
             </svg>
           <% end %>
         </div>
