--- a/app/views/lookbook/workbench/_header.html.erb
+++ b/app/views/lookbook/workbench/_header.html.erb
@@ -11,7 +11,7 @@
     <span class="text-gray-500">x</span>
     <span x-text="`${previewViewportHeight}px`"></span>
   </div>
-  <div class="flex items-center ml-3 pl-3 space-x-3 border-l border-gray-300 text-gray-400">
+  <div class="flex items-center ml-auto md:ml-3 md:pl-3 space-x-3 md:border-l border-gray-300 text-gray-400">
     <a
       href="<%= url_for %>"
       class="block transition hover:text-indigo-800"
