--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1559,10 +1559,6 @@ pre[class*="language-"] {
   margin-left: auto;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
 .-mb-px {
   margin-bottom: -1px;
 }
@@ -1900,10 +1896,6 @@ pre[class*="language-"] {
 
 .pr-3 {
   padding-right: 0.75rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
 }
 
 .pt-10 {
@@ -2493,6 +2485,10 @@ pre[class*="language-"] {
     margin-right: -1px;
   }
 
+  .md\:ml-3 {
+    margin-left: 0.75rem;
+  }
+
   .md\:grid {
     display: grid;
   }
@@ -2503,6 +2499,14 @@ pre[class*="language-"] {
 
   .md\:min-h-0 {
     min-height: 0px;
+  }
+
+  .md\:border-l {
+    border-left-width: 1px;
+  }
+
+  .md\:pl-3 {
+    padding-left: 0.75rem;
   }
 
   .md\:pr-4 {
