--- a/app/views/lookbook/workbench/_preview.html.erb
+++ b/app/views/lookbook/workbench/_preview.html.erb
@@ -1,4 +1,4 @@
-<div id="preview" class="h-full min-h-fill md:h-auto md:min-h-0 flex w-full bg-gray-50">
+<div id="preview" class="h-full md:h-auto md:min-h-0 flex w-full bg-gray-50">
   <div class="relative mx-auto bg-white" x-data="preview" :style="`width: ${$screen('md') ? $store.preview.width : '100%'}`">
     <iframe seamless
       class="absolute h-full inset-0 w-full border-l border-gray-300 md:pr-4 md:-mx-px"
