--- a/app/views/lookbook/nav/_node.html.erb
+++ b/app/views/lookbook/nav/_node.html.erb
@@ -1,5 +1,5 @@
 <li id="<%= node.id %>" x-data="navNode" <% if node.hierarchy_depth == 1 %> class="py-1 border-b border-gray-300 cursor-pointer"<% end %> :class="{hidden}" x-cloak>
-  <div @click="toggle" style="<%= nav_padding_style(node.hierarchy_depth) %>">
+  <div @click="toggle(); if (open()) { <%= "navigate('#{path}')" if defined?(path) %>}" style="<%= nav_padding_style(node.hierarchy_depth) %>" class="hover:bg-gray-200 hover:bg-opacity-50">
     <div class="flex items-center cursor-pointer pr-3 py-[5px]">
       <svg class="feather w-3 h-3 mr-1 text-gray-500 flex-none">
         <use xlink:href="/lookbook-assets/feather-sprite.svg#chevron-down" x-show="open" x-cloak />
