--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1492,22 +1492,6 @@ pre[class*="language-"] {
   bottom: 0px;
 }
 
-.top-\[-2px\] {
-  top: -2px;
-}
-
-.left-\[-2px\] {
-  left: -2px;
-}
-
-.top-\[4px\] {
-  top: 4px;
-}
-
-.left-\[4px\] {
-  left: 4px;
-}
-
 .left-4 {
   left: 1rem;
 }
@@ -1541,12 +1525,16 @@ pre[class*="language-"] {
   margin-top: 0.5rem;
 }
 
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
 .mr-1\.5 {
   margin-right: 0.375rem;
+}
+
+.ml-\[3px\] {
+  margin-left: 3px;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .mr-3 {
@@ -1862,14 +1850,14 @@ pre[class*="language-"] {
   padding-right: 1rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .py-\[5px\] {
   padding-top: 5px;
   padding-bottom: 5px;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-2 {
@@ -1973,14 +1961,14 @@ pre[class*="language-"] {
   color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 
-.text-indigo-500 {
-  --tw-text-opacity: 1;
-  color: rgba(99, 102, 241, var(--tw-text-opacity));
-}
-
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+
+.text-indigo-500 {
+  --tw-text-opacity: 1;
+  color: rgba(99, 102, 241, var(--tw-text-opacity));
 }
 
 .\!text-gray-300 {
