Remove relative lookups in partial paths

--- a/app/views/lookbook/app/index.html.erb
+++ b/app/views/lookbook/app/index.html.erb
@@ -1,5 +1,5 @@
 <div class="flex flex-col h-full min-h-fill w-full">
-  <%= render "./shared/header" %>
+  <%= render "shared/header" %>
   <div class="flex flex-col items-center justify-center h-full min-h-fill">
     <div class="p-4 text-center">
       <svg class="feather w-10 h-10 text-gray-300 mx-auto">
