--- a/app/views/lookbook/layouts/app.html.erb
+++ b/app/views/lookbook/layouts/app.html.erb
@@ -21,14 +21,14 @@
   <div
     x-data="page"
     x-effect="updateTitle"
-    @refresh.document="fetchHTML().then(doc => $dispatch('document:updated', {doc}))" 
+    @refresh.document="fetchHTML().then(doc => $dispatch('document:updated', {doc}))"
     @popstate.window="fetchHTML().then(doc => { $dispatch('document:loaded', {doc}); sidebarOpenMobile = false})"
     @sidebar:toggle.window="sidebarOpenMobile = !sidebarOpenMobile"
     :style="`grid-template-columns: ${$store.nav.width}px 1px 1fr;`"
     class="md:grid w-screen h-screen"
   >
     <div class="h-full bg-gray-100 overflow-hidden" x-show="$screen('md') || sidebarOpenMobile" x-cloak>
-      <%= render "./sidebar" %>
+      <%= render "shared/sidebar" %>
     </div>
     <div x-data="split(splitProps)" class="h-full gutter border-r border-gray-300 relative" x-show="$screen('md')" x-cloak>
       <div class="w-[9px] h-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute top-0 bottom-0 transform -translate-x-1/2 cursor-[col-resize] z-10"></div>
