--- a/app/views/lookbook/workbench/_header.html.erb
+++ b/app/views/lookbook/workbench/_header.html.erb
@@ -1,4 +1,4 @@
-<%= render "./shared/header" do %>
+<%= render "shared/header" do %>
   <div class="flex items-center">
     <div class="flex items-center space-x-1">
       <strong class="whitespace-nowrap truncate"><%= @preview.label %></strong>
