Ensure engine mount path is used for websocket URL

--- a/app/views/lookbook/layouts/app.html.erb
+++ b/app/views/lookbook/layouts/app.html.erb
@@ -10,7 +10,7 @@
 
   <% if config.auto_refresh %>
     <script>
-      window.SOCKET_PATH = "/lookbook/cable";
+      window.SOCKET_PATH = "<%= Lookbook::Engine.websocket_mount_path %>";
     </script>
   <% end %>
   <script src="/lookbook-assets/app.js" defer></script>
